[FIX] Spacing between dates and project and removing border-bottom

--- a/static/articles/css/articles.css
+++ b/static/articles/css/articles.css
@@ -8,9 +8,10 @@
 
 .article-item {
     display: flex;
-    justify-content: space-between;
-    border-bottom: solid 1px grey;
-    padding: 10px;
+}
+
+.info, .article-item {
+    padding-top: 10px;
 }
 
 .article-item a,
